v11/docs/ModelsSSLScanJobPartDefinition.md
# ModelsSSLScanJobPartDefinition

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**ItemType** | Pointer to **int32** |  | [optional] 
**Value** | Pointer to **NullableString** |  | [optional] 

## Methods

### NewModelsSSLScanJobPartDefinition

`func NewModelsSSLScanJobPartDefinition() *ModelsSSLScanJobPartDefinition`

NewModelsSSLScanJobPartDefinition instantiates a new ModelsSSLScanJobPartDefinition object
This constructor will assign default values to properties that have it defined,
and makes sure properties required by API are set, but the set of arguments
will change when the set of required properties is changed

### NewModelsSSLScanJobPartDefinitionWithDefaults

`func NewModelsSSLScanJobPartDefinitionWithDefaults() *ModelsSSLScanJobPartDefinition`

NewModelsSSLScanJobPartDefinitionWithDefaults instantiates a new ModelsSSLScanJobPartDefinition object
This constructor will only assign default values to properties that have it defined,
but it doesn't guarantee that properties required by API are set

### GetItemType

`func (o *ModelsSSLScanJobPartDefinition) GetItemType() int32`

GetItemType returns the ItemType field if non-nil, zero value otherwise.

### GetItemTypeOk

`func (o *ModelsSSLScanJobPartDefinition) GetItemTypeOk() (*int32, bool)`

GetItemTypeOk returns a tuple with the ItemType field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetItemType

`func (o *ModelsSSLScanJobPartDefinition) SetItemType(v int32)`

SetItemType sets ItemType field to given value.

### HasItemType

`func (o *ModelsSSLScanJobPartDefinition) HasItemType() bool`

HasItemType returns a boolean if a field has been set.

### GetValue

`func (o *ModelsSSLScanJobPartDefinition) GetValue() string`

GetValue returns the Value field if non-nil, zero value otherwise.

### GetValueOk

`func (o *ModelsSSLScanJobPartDefinition) GetValueOk() (*string, bool)`

GetValueOk returns a tuple with the Value field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetValue

`func (o *ModelsSSLScanJobPartDefinition) SetValue(v string)`

SetValue sets Value field to given value.

### HasValue

`func (o *ModelsSSLScanJobPartDefinition) HasValue() bool`

HasValue returns a boolean if a field has been set.

### SetValueNil

`func (o *ModelsSSLScanJobPartDefinition) SetValueNil(b bool)`

 SetValueNil sets the value for Value to be an explicit nil

### UnsetValue
`func (o *ModelsSSLScanJobPartDefinition) UnsetValue()`

UnsetValue ensures that no value is present for Value, not even an explicit nil

[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


